After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692877 - display: Request XI2.3
display: Request XI2.3
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-30 13:55 UTC by Colin Walters
Modified: 2013-01-31 09:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
display: Request XI2.3 (979 bytes, patch)
2013-01-30 13:55 UTC, Colin Walters
accepted-commit_now Details | Review

Description Colin Walters 2013-01-30 13:55:47 UTC
Created attachment 234825 [details] [review]
display: Request XI2.3

This matches commit:

http://git.gnome.org/browse/clutter/commit/?h=clutter-1.14&id=3e1450ba17fce90a8034cc525c67a87ff3cdd53d

Since XIQueryVersion, the bad API that it is, chooses the first client
version that it gets, we need to ensure that we pass XIQueryVersion the
new XI2.3 version, knowing fully well that Clutter won't be confused
by the new features.
---
 src/core/display.c |    2 +-
 1 files changed, 1 insertions(+), 1 deletions(-)
Comment 1 Colin Walters 2013-01-30 13:56:23 UTC
The latest gnome-ostree's gnome-shell crashes without this patch.
Comment 2 Florian Müllner 2013-01-30 14:13:18 UTC
Review of attachment 234825 [details] [review]:

OK, go ahead